WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209224
CrossOriginPreflightResultCacheItem::allows methods should not use out parameters
https://bugs.webkit.org/show_bug.cgi?id=209224
Summary
CrossOriginPreflightResultCacheItem::allows methods should not use out parame...
youenn fablet
Reported
2020-03-18 06:12:20 PDT
CrossOriginPreflightResultCacheItem::allows methods should not use out parameters
Attachments
Patch
(6.29 KB, patch)
2020-03-18 06:48 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-03-18 06:48:29 PDT
Created
attachment 393844
[details]
Patch
EWS
Comment 2
2020-03-18 12:40:30 PDT
Committed
r258660
: <
https://trac.webkit.org/changeset/258660
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 393844
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-03-18 12:41:15 PDT
<
rdar://problem/60597352
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug