CrossOriginPreflightResultCacheItem::allows methods should not use out parameters https://bugs.webkit.org/show_bug.cgi?id=209224

Reviewed by Alex Christensen.

Instead of having an out parameter for the error description, either return whether there is an error or not.
Covered by existing tests.

* loader/CrossOriginPreflightResultCache.cpp:
(WebCore::CrossOriginPreflightResultCacheItem::validateMethodAndHeaders const):
(WebCore::CrossOriginPreflightResultCacheItem::allowsCrossOriginMethod const):
(WebCore::CrossOriginPreflightResultCacheItem::validateCrossOriginHeaders const):
(WebCore::CrossOriginPreflightResultCacheItem::allowsRequest const):
(WebCore::CrossOriginPreflightResultCacheItem::allowsCrossOriginHeaders const): Deleted.
* loader/CrossOriginPreflightResultCache.h:


Canonical link: https://commits.webkit.org/222173@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258660 268f45cc-cd09-0410-ab3c-d52691b4dbfc