Source/WebCore/loader/CrossOriginPreflightResultCache.h
@@ -50,8 +50,8 @@ public:
     bool allowsRequest(StoredCredentialsPolicy, const String& method, const HTTPHeaderMap&) const;
 
 private:
-    bool allowsCrossOriginMethod(const String&, StoredCredentialsPolicy, String& errorDescription) const;
-    bool allowsCrossOriginHeaders(const HTTPHeaderMap&, StoredCredentialsPolicy, String& errorDescription) const;
+    bool allowsCrossOriginMethod(const String&, StoredCredentialsPolicy) const;
+    Optional<String> validateCrossOriginHeaders(const HTTPHeaderMap&, StoredCredentialsPolicy) const;
 
     // FIXME: A better solution to holding onto the absolute expiration time might be
     // to start a timer for the expiration delta that removes this from the cache when
